# snowboy_ros

./: CMakeLists.txt  README.md  package.xml
cfg/: SnowboyReconfigure.cfg
include/snowboy_ros/: hotword_detector.h  resampler.h
launch/: snowboy.launch
src/: hotword_detector.cpp  hotword_detector_node.cpp  resampler.cpp
