<?xml version="1.0"?>
<package format="3">
  <name>snowboy_ros</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>audio_common_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libblas-dev</depend>
  <depend>roscpp</depend>

</package>
